--- a/site/src/app.css
+++ b/site/src/app.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 @import "tw-animate-css";
 @plugin "@tailwindcss/typography";
+@custom-variant dark (&:where(.dark, .dark *));
 
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
